--- a/BitoDesktop.WPF/MainWindow.xaml
+++ b/BitoDesktop.WPF/MainWindow.xaml
@@ -24,6 +24,10 @@
                 Grid.ColumnSpan="2"
                 NavigationUIVisibility="Hidden" />
             <Frame x:Name="SideBarFrame" NavigationUIVisibility="Hidden" />
+            <Frame
+                x:Name="OtherPagesFrame"
+                Grid.ColumnSpan="2"
+                NavigationUIVisibility="Hidden" />
         </Grid>
     </Grid>
 </Window>
