--- a/BitoDesktop.WPF/Pages/LoginPage.xaml
+++ b/BitoDesktop.WPF/Pages/LoginPage.xaml
@@ -12,7 +12,7 @@
     Loaded="Page_Loaded"
     mc:Ignorable="d">
     <Grid>
-        <ItemsControl
+        <Frame
             x:Name="LoginStageControl"
             HorizontalAlignment="Center"
             VerticalAlignment="Center" />
