--- a/BitoDesktop.WPF/Controllers/Pos/ProductSearchController.xaml
+++ b/BitoDesktop.WPF/Controllers/Pos/ProductSearchController.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Height="62"
     mc:Ignorable="d">
-    <Border Background="White">
+    <Border Background="#F6F6F6">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition />
