--- a/BitoDesktop.WPF/Controllers/Pos/PaymentMethodAmount.xaml
+++ b/BitoDesktop.WPF/Controllers/Pos/PaymentMethodAmount.xaml
@@ -17,7 +17,6 @@
             <TextBlock
                 x:Name="PaymentTypeTxt"
                 Margin="5"
-                HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 FontSize="15"
                 FontWeight="DemiBold"
@@ -39,7 +38,8 @@
                     Padding="0"
                     md:ButtonAssist.CornerRadius="10"
                     Background="#F5F5F5"
-                    BorderThickness="0">
+                    BorderThickness="0"
+                    Click="EditBtn_Click">
                     <md:PackIcon Foreground="#006AFF" Kind="Pencil" />
                 </Button>
                 <Button
